Meldpunt -> CSIRT step 1

--- a/csirt.divd.nl/assets/css/menu.scss
+++ b/csirt.divd.nl/assets/css/menu.scss
@@ -163,6 +163,7 @@ $menu-link-padding: 1em;
       padding: $menu-link-padding;
       display: flex;
       justify-content: space-between;
+      text-decoration: none;
     }
   }
 
