--- a/csirt.divd.nl/_layouts/post.html
+++ b/csirt.divd.nl/_layouts/post.html
@@ -5,6 +5,6 @@ layout: page
 <p>
 	{{ page.date | date_to_string }} - <a href='/handlers/{{ page.author }}'>{{ page.author }}</a>
 	<br>
-	<small><a href={{page.url }}#english)>English below</a></small>
+	<small><a href={{page.url }}#english>English below</a></small>
 </p>
 {{ content }}
