Shared team database between csirt and www Each team member has a page This page now shows the pasts on www.divd.nl and csirt.divd.nl Reasearchers are also credited

--- a/www.divd.nl/assets/css/main.css
+++ b/www.divd.nl/assets/css/main.css
@@ -2838,3 +2838,8 @@ body.is-menu-visible #menu {
   text-align: right;
   float: right;
   text-transform: none; }
+
+/** Social media icons **/
+.social-icon {
+  height: 1.5em;
+}
