--- a/csirt.divd.nl/_layouts/post.html
+++ b/csirt.divd.nl/_layouts/post.html
@@ -1,9 +1,16 @@
 ---
 layout: page
 ---
+{% assign page_author = page.author | default: "anonymous" %}
+{% assign team = site.team | map: "name" %}
 <h1>{{ page.title }}</h1>
 <p>
-	{{ page.date | date_to_string }} - <a href='/handlers/{{ page.author }}'>{{ page.author }}</a>
+	{{ page.date | date_to_string }} - 
+	{% if team contains page_author %}
+		<a href='https://www.divd.nl/team/{{ page_author }}.md'>{{ page_author }}</a> 
+	{% else %}
+		{{ page_author }}
+	{% endif %}
 	<br>
 	<small><a href={{page.url }}#english>English below</a></small>
 </p>
