--- a/www.divd.nl/_layouts/team.html
+++ b/www.divd.nl/_layouts/team.html
@@ -8,7 +8,7 @@ layout: default
 <br>
 {% if page.twitter %}
 <br>
-<a href="https://twitter.com/{{ page.twitter }}"" class="icon fa-twitter"><span class="label">Icon</span> - {{ page.twitter }}</a>
+<a href="https://twitter.com/{{ page.twitter }}" class="icon fa-twitter"><span class="label">Icon</span> - {{ page.twitter }}</a>
 {% endif %}
 {% if page.linkedin %}
 <br>
