--- a/csirt.divd.nl/_layouts/case.html
+++ b/csirt.divd.nl/_layouts/case.html
@@ -69,7 +69,7 @@ layout: default
 			<td> {{ page.versions }} </td>
 		</tr><tr>
 			<td> Recommendation </td>
-			<td> {{ page.recommandation }} </td>
+			<td> {{ page.recommendation }} </td>
 		</tr>
 		{% if page.patch_status %}
 			<tr>
