Hidden donation pages to test out donation modules

--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -10,10 +10,14 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
+    {% for script in page.scripts %}
+        <script type="text/javascript" src="/assets/js/{{ script }}"></script>
+    {% endfor %}
+    <bla></bla>
 </body>
 </html>
