--- a/www.divd.nl/assets/css/main.css
+++ b/www.divd.nl/assets/css/main.css
@@ -2843,3 +2843,11 @@ body.is-menu-visible #menu {
 .social-icon {
   height: 1.5em;
 }
+
+.right-align {
+  text-align: right;
+}
+
+.unbrakable {
+  white-space: nowrap;
+}
