--- a/csirt.divd.nl/_layouts/case.html
+++ b/csirt.divd.nl/_layouts/case.html
@@ -11,11 +11,11 @@ layout: default
 	    <tr>
 			<td> Our reference </td><td> {{ page.divd | divd }} </td>
 		</tr><tr>
-			<td> Case lead </td><td> 
+			<td> Case lead </td><td>
 				{% if team contains lead -%}
 					<a href='https://www.divd.nl/team/{{ lead }}/'>{{ lead }}</a>
 				{% else -%}
-					{{ lead }} 
+					{{ lead }}
 				{% endif -%}
 			</td>
 		</tr>
@@ -31,12 +31,12 @@ layout: default
 				</td>
 			</tr>
 		{% endif %}
-		{% if page.reseachers %}
+		{% if page.researchers %}
 			<tr>
 				<td> Researcher(s) </td>
 				<td>
 					<ul>
-						{% for r in page.reseachers -%}
+						{% for r in page.researchers -%}
 							<li>
 								{% if team contains r %}
 									<a href='https://www.divd.nl/team/{{ r }}/'>{{ r }}</a>
@@ -93,7 +93,7 @@ layout: default
 	<small><a href='{{ page.url }}#english'>English below</a></small>
 </p>
 
-{{ content }} 		
+{{ content }}
 
 <br>
 
