--- a/csirt.divd.nl/_layouts/post.html
+++ b/csirt.divd.nl/_layouts/post.html
@@ -1,15 +1,33 @@
 ---
 layout: page
 ---
-{% assign page_author = page.author | default: "anonymous" %}
 {% assign team = site.team | map: "name" %}
 <h1>{{ page.title }}</h1>
 <p>
-	{{ page.date | date_to_string }} - 
-	{% if team contains page_author %}
-		<a href='https://www.divd.nl/team/{{ page_author }}/'>{{ page_author }}</a> 
+	{{ page.date | date_to_string }} -
+	{% if page.author[0] %}
+		{% assign fist = true %}
+		{% for a in page.author %}
+			{% if first %}
+				{% assign first = false %}
+			{% else %}
+				,
+			{% endif %}
+			{% assign page_author = a | default: "anonymous" %}
+			{% if team contains page_author %}
+				<a href='https://www.divd.nl/team/{{ page_author }}/'>{{ page_author }}</a> 
+			{% else %}
+				{{ page_author }}
+			{% endif %}
+		{% endfor %}
 	{% else %}
-		{{ page_author }}
+		{% assign page_author = page.author | default: "anonymous" %}
+		{% if team contains page_author %}
+			<a href='https://www.divd.nl/team/{{ page_author }}/'>{{ page_author }}</a> 
+		{% else %}
+			{{ page_author }}
+		{% endif %}
+
 	{% endif %}
 	<br>
 	<small><a href={{page.url }}#english>English below</a></small>
