--- a/www.divd.nl/_includes/posts-cases.html
+++ b/www.divd.nl/_includes/posts-cases.html
@@ -8,14 +8,14 @@
 {% endfor %}
 
 {% for c in site.cases %}
-  {% if c.author == include.name or c.lead == include.name or c.reseachers contains include.name %}
+  {% if c.author contains include.name or c.lead == include.name or c.reseachers contains include.name %}
     {% assign found = true %}
     {% assign cases = true %}
   {% endif %}
 {% endfor %}
 
 {% for p in site.csirt_posts %}
-  {% if p.author == include.name %}
+  {% if p.author contains include.name %}
     {% assign found = true %}
     {% assign csirt_blog = true %}
   {% endif %}
@@ -60,7 +60,7 @@
     <ul>
       {% assign rev_cases = site.cases | reverse %}
       {% for c in rev_cases %}
-        {% if c.author == include.name or c.lead == include.name or c.reseachers contains include.name %}
+        {% if c.author contains include.name or c.lead == include.name or c.reseachers contains include.name %}
           <li>
             <a href='https://csirt.divd.nl/{{ c.divd }}'>{{ c.title }}</a>
           </li>
@@ -106,7 +106,7 @@
     <ul>
       {% assign rev_posts = site.csirt_posts | reverse %}
       {% for p in rev_posts %}
-        {% if p.author == include.name %}
+        {% if p.author contains include.name %}
           <li>
             <a href='https://csirt.divd.nl{{ p.url }}'>{{ p.date | date_to_long_string }} - {{ p.title }}</a>
           </li>
