--- a/csirt.divd.nl/_includes/menu.html
+++ b/csirt.divd.nl/_includes/menu.html
@@ -68,6 +68,22 @@ Example:
 						{% endfor %}
 			    	</ul>
 		    	</li>
+			{% elsif item.link == "/cves/" %}
+				{% assign cvepages = site.cves |reverse %}
+		    	<li class="menu-item has-children">
+		    		<a href="/cves/" {% if page.url == item.link %}class="black_url"{% endif %}> 
+						CVEs <span class="dropdown-icon"></span>
+					</a>
+   					<ul class="sub-menu">
+						{% for page in cvepages %}
+							{% if forloop.index <= 10 %}
+							    <li class="menu-item">
+							        <a href="{{ page.url | prepend: site.baseurl }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ page.cve }} - {{ page.title | slice: 0, 30 }}...</a>
+							    </li>
+							{% endif %}
+						{% endfor %}
+			    	</ul>
+		    	</li>
 			{% elsif item.link == "/faq/" %}
 		    	<li class="menu-item has-children">
 		    		<a href="/faq/" {% if page.url == item.link %}class="black_url"{% endif %}> 
