--- a/csirt.divd.nl/_includes/navigation.html
+++ b/csirt.divd.nl/_includes/navigation.html
@@ -5,6 +5,10 @@
             <span class="logo"><a href="/">Home</a> / <a href="/blog/">Blog</a> / {{ page.title | capitalize }}</span>
         {% elsif page.url contains "/cases/" and page.url != "/cases/" %}
             <span class="logo"><a href="/">Home</a> / <a href="/cases/">Cases</a> / {{ page.title | capitalize }}</span>
+        {% elsif page.url contains "/cves/" and page.url != "/cves/" %}
+            <span class="logo"><a href="/">Home</a> / <a href="/cves/">CVEs</a> / {{ page.cve | capitalize }}</span>
+        {% elsif page.url == "/cves/" %}
+            <span class="logo"><a href="/">Home</a> / CVEs 
         {% elsif page.url contains "/faq/" and page.url != "/faq/" %}
             <span class="logo"><a href="/">Home</a> / <a href="/faq/">FAQ</a> / {{ page.title | capitalize }}</span>
         {% else %}
