--- a/www.divd.nl/_includes/navigation.html
+++ b/www.divd.nl/_includes/navigation.html
@@ -18,9 +18,10 @@
         <li><a href="code">Code of Conduct</a></li>
         <li><a href="news">News</a></li>
         <li><a href="reports">Reports</a></li>
-        <li><a href="https://www.securitymeldpunt.nl/">CSIRT</a></li>
+        <li><a href="https://csirt.divd.nl/">CSIRT</a></li>
         <li><a href="partners">Partners</a></li>
         <li><a href="contact">Contact</a></li>
+        <li><a href="donate">Donate</a></li>
         <!-- <li><a href="goto">Go to</a></li> -->
     </ul>
 </nav>
