Social Media consolidation

--- a/csirt.divd.nl/_includes/footer.html
+++ b/csirt.divd.nl/_includes/footer.html
@@ -2,9 +2,11 @@
     <div class="inner">
         <div class="content">
             <ul class="plain">
-                <li><a href="https://twitter.com/DIVDcsirt"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                {% comment %}
                 <li><a href="https://www.facebook.com/DIVDcsirt"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-                <li><a href="https://www.linkedin.com/company/security-meldpunt"><i class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
+                {% endcomment %}
+                <li><a href="https://www.linkedin.com/company/divd-nl"><i class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
             </ul>
         </div>
     </div>
