Add security tile for public documents
Fixes #122 -- introduces a new page for documents around security policies
and visions. Texts are not final but this includes the barebones. This also
moves the "parters" part to the footer to keep the tiles in a nice 3x3 format.

--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -3,6 +3,7 @@
         <div class="inner">
             <div class="content">
                 <ul class="plain">
+                    <li><a href="/partners"><i class="icon fa-address-book-o">&nbsp;</i>Partners</a></li>
                     <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
                     <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
                 </ul>
@@ -18,6 +19,5 @@
     {% for script in page.scripts %}
         <script type="text/javascript" src="/assets/js/{{ script }}"></script>
     {% endfor %}
-    <bla></bla>
 </body>
 </html>
