--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -8,6 +8,7 @@
                     <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
                 </ul>
             </div>
+        </div>
     </footer>
 
     <!-- Scripts -->
