--- a/www.divd.nl/_includes/last-10-posts.html
+++ b/www.divd.nl/_includes/last-10-posts.html
@@ -9,5 +9,5 @@
 		{% endif %}
 	{% endfor %}
 	<br>
-	<div><a href='https://csirt.divd.nl/news/'>All posts</a></div>
+	<div><a href='https://csirt.divd.nl/blog/'>All posts</a></div>
 </header>
