--- a/csirt.divd.nl/_includes/menu.html
+++ b/csirt.divd.nl/_includes/menu.html
@@ -45,8 +45,8 @@ Example:
 		    				{% if p.url contains "/cases/" and p.url != "/cases/" and p.layout != "redirect" %}
 		    					<li class="menu-item">
 			    					<a href="{{ p.url }}" {% if page.url == p.url %}class="black_url"{% endif %}>
-			    						{{ p.title | slice: 0, 75 }}<br>
-			    						{{ p.short | slice: 0, 75 }}...
+			    						{{ p.title | slice: 0, 75 | escape }}<br>
+			    						{{ p.short | slice: 0, 75 | escape }}...
 			    					</a>
 			    				</li>
 			    			{% endif %}
@@ -62,7 +62,7 @@ Example:
 						{% for post in site.posts %}
 							{% if forloop.index <= 10 %}
 							    <li class="menu-item">
-							        <a href="{{ post.url | prepend: site.baseurl }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ post.date | date: "%Y-%m-%d" }} : {{ post.title | slice: 0, 75 }}...</a>
+							        <a href="{{ post.url | prepend: site.baseurl | uri_encode }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ post.date | date: "%Y-%m-%d" }} : {{ post.title | slice: 0, 75 | escape }}...</a>
 							    </li>
 							{% endif %}
 						{% endfor %}
@@ -81,7 +81,7 @@ Example:
 						{% for page in cvepages %}
 							{% if forloop.index <= 10 %}
 							    <li class="menu-item">
-							        <a href="{{ page.url | prepend: site.baseurl }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ page.cve }} - {{ page.title | slice: 0, 60 }}...</a>
+							        <a href="{{ page.url | prepend: site.baseurl | uri_encode }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ page.cve }} - {{ page.title | slice: 0, 60 | escape }}...</a>
 							    </li>
 							{% endif %}
 						{% endfor %}
@@ -98,7 +98,7 @@ Example:
 		    				{% if p.url contains "/faq/" and p.url != "/faq/" %}
 		    					<li class="menu-item">
 			    					<a href="{{ p.url }}" {% if page.url == p.url %}class="black_url"{% endif %}>
-			    						{{ p.title | slice: 0, 40 }}...
+			    						{{ p.title | slice: 0, 40 | escape }}...
 			    					</a>
 			    				</li>
 			    			{% endif %}
@@ -114,7 +114,7 @@ Example:
 	   					<ul class="sub-menu">
 					    	{% for c in item.children %}
 		    					<li class="menu-item">
-			    					<a href="{{ c.link }}">{{ c.name }}</a>
+			    					<a href="{{ c.link }}">{{ c.name | escape }}</a>
 			    				</li>
 				    		{% endfor %}
 				    	</ul>
