--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -12,7 +12,7 @@
                 </td>
                 <td align="right">
                   <b>Scanning from</b><br />
-                  AS50559 (194.5.73.0/24)
+                  <a href="https://apps.db.ripe.net/db-web-ui/query?bflag=false&dflag=false&rflag=true&searchtext=AS50559&source=RIPE">AS50559</a> (194.5.73.0/24)
                 </td>
               </table>
             </div>
