--- a/www.divd.nl/assets/css/main.css
+++ b/www.divd.nl/assets/css/main.css
@@ -2437,6 +2437,7 @@ body {
     height: inherit;
     line-height: inherit;
     padding: 0 1.25rem;
+    overflow: hidden;
     text-decoration: none; }
     #header > .logo > a {
       color: #ffffff;
