Fixing HTML errors in www.divd.nl (and adding tests)

--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -3,17 +3,19 @@
         <div class="inner">
             <div class="content">
               <table>
-                <td>
-                  <ul class="plain">
-                    <li><a href="/partners"><i class="icon fa-address-book-o">&nbsp;</i>Partners</a></li>
-                    <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-                    <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-                  </ul>
-                </td>
-                <td align="right">
-                  <b>Scanning from</b><br />
-                  <a href="https://apps.db.ripe.net/db-web-ui/query?bflag=false&dflag=false&rflag=true&searchtext=AS50559&source=RIPE">AS50559</a> (194.5.73.0/24)
-                </td>
+                <tr>
+                  <td>
+                    <ul class="plain">
+                      <li><a href="/partners"><i class="icon fa-address-book-o">&nbsp;</i>Partners</a></li>
+                      <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+                      <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+                    </ul>
+                  </td>
+                  <td class="right-align">
+                    <b>Scanning from</b><br />
+                    <a href="https://apps.db.ripe.net/db-web-ui/query?bflag=false&dflag=false&rflag=true&searchtext=AS50559&source=RIPE">AS50559</a> (194.5.73.0/24)
+                  </td>
+                </tr>
               </table>
             </div>
         </div>
