Make sure teammember content is parsed as Markdown
https://talk.jekyllrb.com/t/markdown-parsing-order-in-custom-liquid-tags/4397
describes we can use the '| markdownify' filter to parse content as markdown.

--- a/www.divd.nl/_layouts/team.html
+++ b/www.divd.nl/_layouts/team.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.name }}</h1>
 
-{{ content }}
+{{ content | markdownify }}
 <br>
 {% if page.twitter or page.linkedin or page.wikipedia %}
 <h2>Social media</h2>
