Basic Mermaid that doesn;t work

--- a/csirt.divd.nl/_includes/footer.html
+++ b/csirt.divd.nl/_includes/footer.html
@@ -17,6 +17,7 @@
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/mermaid.min.js"></script>
 
 {% if site.google_analytics %}
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
