Implemented Gantt charts for 2021

--- a/csirt.divd.nl/_includes/header.html
+++ b/csirt.divd.nl/_includes/header.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/mermaid.css">
 </head>
 <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
