--- a/csirt.divd.nl/_includes/timeline_gantt.html
+++ b/csirt.divd.nl/_includes/timeline_gantt.html
@@ -7,14 +7,40 @@
 	    axisFormat  %e %b %Y
 	    section Case
 	    {% if page.end %}
-	    	{{ page.title }}            :{{ page.start }}, {{ caseend }}
+
+			{% comment %} convert our dates to Number of seconds since 1970-01-01 00:00:00 UTC {% endcomment %}
+			{% assign pageStart = page.start | date: '%s' %}
+			{% assign pageEnd   = page.end   | date: '%s' %}
+
+			{% comment %} difference in seconds {% endcomment %}
+			{% assign diffSeconds = pageEnd | minus: pageStart %}
+
+			{% comment %} difference in days {% endcomment %}
+			{% assign caseDuration = diffSeconds | divided_by: 3600 | divided_by: 24 %}		
+
+	    	{{ page.title | remove: ':' }} ({{caseDuration}} days)            :{{ page.start }}, {{ caseend }}
 	    {% else %}
-	    	{{ page.title }} (still open)           :{{ page.start }}, {{ caseend }}
+	    	{{ page.title | remove: ':' }} (still open)           :{{ page.start }}, {{ caseend }}
 	    {% endif %}
 	    section Events
 		{%- for line in page.timeline %}
 			{% if line.end -%}
-				{{ line.event | markdownify | remove: '<p>' | remove: '</p>' | strip_html | strip_newlines }} : {{ line.start }}, {{ line.end }}
+				{% if line.end == "open" %}
+					{{ line.event | markdownify | remove: '<p>' | remove: '</p>' | strip_html | strip_newlines }} (?d): {{ line.start }}, {{ caseend }}
+				{% else %}
+
+					{% comment %} convert our dates to Number of seconds since 1970-01-01 00:00:00 UTC {% endcomment %}
+					{% assign lineStart = line.start | date: '%s' %}
+					{% assign lineEnd   = line.end   | date: '%s' %}
+
+					{% comment %} difference in seconds {% endcomment %}
+					{% assign diffSeconds = lineEnd | minus: lineStart %}
+
+					{% comment %} difference in days {% endcomment %}
+					{% assign lineDuration = diffSeconds | divided_by: 3600 | divided_by: 24 %}		
+
+					{{ line.event | markdownify | remove: '<p>' | remove: '</p>' | strip_html | strip_newlines }} ({{ lineDuration }} days) : {{ line.start }}, {{ line.end }}
+				{% endif %}
 			{%- else -%}
 				{{ line.event | markdownify | remove: '<p>' | remove: '</p>' | strip_html | strip_newlines }} :  milestone, {{ line.start }}, 0d
 			{% endif -%}
