--- a/csirt.divd.nl/_includes/timeline_table.html
+++ b/csirt.divd.nl/_includes/timeline_table.html
@@ -14,9 +14,13 @@
 		{%- for line in page.timeline %}
 			<tr>
 				<td>
-					{{ line.start | date_to_string }}
+					<span class="nowrap">{{ line.start | date_to_string }}</span>
 					{% if line.end %} 
-						- <br> {{ line.end | date_to_string }}
+						{% if line.end == "open" %}
+							<br> ?
+						{% else %}
+							<br><span class="nowrap">{{ line.end | date_to_string }}</span>
+						{% endif %}
 					{% endif %}
 				</td>
 				<td>
