--- a/csirt.divd.nl/_includes/timeline_table.html
+++ b/csirt.divd.nl/_includes/timeline_table.html
@@ -19,7 +19,7 @@
 						{% if line.end == "open" %}
 							<br> ?
 						{% else %}
-							<br><span class="nowrap">{{ line.end | date_to_string }}</span>
+							- <br><span class="nowrap">{{ line.end | date_to_string }}</span>
 						{% endif %}
 					{% endif %}
 				</td>
