Added ANBI documents (subpage) to footer

--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -9,6 +9,7 @@
                       <li><a href="/partners"><i class="icon fa-address-book-o">&nbsp;</i>Partners</a></li>
                       <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
                       <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+                      <li><a href="/anbi"><i class="icon fa-book">&nbsp;</i>ANBI</a></li>
                     </ul>
                   </td>
                   <td class="right-align">
