WIP: Prepare for Chris' switch of partners and security

--- a/www.divd.nl/_includes/footer.html
+++ b/www.divd.nl/_includes/footer.html
@@ -6,7 +6,7 @@
                 <tr>
                   <td>
                     <ul class="plain">
-                      <li><a href="/partners"><i class="icon fa-address-book-o">&nbsp;</i>Partners</a></li>
+                      <li><a href="/security"><i class="icon fa-shield">&nbsp;</i>Security</a></li>
                       <li><a href="https://twitter.com/DIVDnl"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
                       <li><a href="https://github.com/DIVD-NL"><i class="icon fa-github">&nbsp;</i>Github</a></li>
                       <li><a href="/anbi"><i class="icon fa-book">&nbsp;</i>ANBI</a></li>
