--- a/csirt.divd.nl/_includes/menu.html
+++ b/csirt.divd.nl/_includes/menu.html
@@ -1,4 +1,4 @@
-{% comment %}
+{%- comment -%}
 Example:
 // <nav class="nav">
 //   <ul class="menu">
@@ -26,105 +26,105 @@ Example:
 //     </li>
 //   </ul>
 // </nav>
-{% endcomment %}
+{%- endcomment -%}
 
 <nav class="nav nav--cen">
 	<div id="menuBtn" class="icon">
 		<i class="fa fa-bars"></i> Menu
 	</div>
 	<ul class="menu" id="nav_menu">
-		{% for item in site.data.navigation %}
-			{% if item.link == "/cases/" %}
+		{%- for item in site.data.navigation -%}
+			{%- if item.link == "/cases/" -%}
 		    	<li class="menu-item has-children">
-		    		<a href="/cases/" {% if page.url == item.link %}class="black_url"{% endif %}> 
+		    		<a href="/cases/" {%- if page.url == item.link -%}class="black_url"{%- endif -%}> 
 						Cases <span class="dropdown-icon"></span>
 					</a>
    					<ul class="sub-menu">
-   						{% assign cases = site.cases |reverse %}
-				    	{% for p in cases %}
+   						{%- assign cases = site.cases |reverse -%}
+				    	{%- for p in cases -%}
 	    					<li class="menu-item">
-		    					<a href="{{ p.url }}" {% if page.url == p.url %}class="black_url"{% endif %}>
+		    					<a href="{{ p.url }}" {%- if page.url == p.url -%}class="black_url"{%- endif -%}>
 		    						{{ p.title | slice: 0, 75 | escape }}<br>
 		    						{{ p.excerpt | slice: 0, 75 | escape }}...
 		    					</a>
 		    				</li>
-			    		{% endfor %}
+			    		{%- endfor -%}
 			    	</ul>
 		    	</li>
-			{% elsif item.link == "/blog/" %}
+			{%- elsif item.link == "/blog/" -%}
 		    	<li class="menu-item has-children">
-		    		<a href="/blog/" {% if page.url == item.link %}class="black_url"{% endif %}> 
+		    		<a href="/blog/" {%- if page.url == item.link -%}class="black_url"{%- endif -%}> 
 						Blog <span class="dropdown-icon"></span>
 					</a>
    					<ul class="sub-menu">
-						{% for post in site.posts %}
-							{% if forloop.index <= 10 %}
+						{%- for post in site.posts -%}
+							{%- if forloop.index <= 10 -%}
 							    <li class="menu-item">
-							        <a href="{{ post.url | prepend: site.baseurl | uri_encode }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ post.date | date: "%Y-%m-%d" }} : {{ post.title | slice: 0, 75 | escape }}...</a>
+							        <a href="{{ post.url | prepend: site.baseurl | uri_encode }}" {%- if page.url == post.url -%}class="black_url"{%- endif -%}> {{ post.date | date: "%Y-%m-%d" }} : {{ post.title | slice: 0, 75 | escape }}...</a>
 							    </li>
-							{% endif %}
-						{% endfor %}
+							{%- endif -%}
+						{%- endfor -%}
 					    <li class="menu-item">
 					        <a href="/blog"> More...</a>
 					    </li>
 			    	</ul>
 		    	</li>
-			{% elsif item.link == "/cves/" %}
-				{% assign cvepages = site.cves |reverse %}
+			{%- elsif item.link == "/cves/" -%}
+				{%- assign cvepages = site.cves |reverse -%}
 		    	<li class="menu-item has-children">
-		    		<a href="/cves/" {% if page.url == item.link %}class="black_url"{% endif %}> 
+		    		<a href="/cves/" {%- if page.url == item.link -%}class="black_url"{%- endif -%}> 
 						CVEs <span class="dropdown-icon"></span>
 					</a>
    					<ul class="sub-menu">
-						{% for page in cvepages %}
-							{% if forloop.index <= 10 %}
+						{%- for page in cvepages -%}
+							{%- if forloop.index <= 10 -%}
 							    <li class="menu-item">
-							        	<a href="{{ page.url | prepend: site.baseurl | uri_encode }}" {% if page.url == post.url %}class="black_url"{% endif %}> {{ page.cve }} - {{ page.title | slice: 0, 60 | escape }}...</a>
+							        	<a href="{{ page.url | prepend: site.baseurl | uri_encode }}" {%- if page.url == post.url -%}class="black_url"{%- endif -%}> {{ page.cve }} - {{ page.title | slice: 0, 60 | escape }}...</a>
 							    </li>
-							{% endif %}
-						{% endfor %}
+							{%- endif -%}
+						{%- endfor -%}
 			    	</ul>
 		    	</li>
-			{% elsif item.link == "/faq/" %}
+			{%- elsif item.link == "/faq/" -%}
 		    	<li class="menu-item has-children">
-		    		<a href="/faq/" {% if page.url == item.link %}class="black_url"{% endif %}> 
+		    		<a href="/faq/" {%- if page.url == item.link -%}class="black_url"{%- endif -%}> 
 						FAQ <span class="dropdown-icon"></span>
 					</a>
    					<ul class="sub-menu">
-   						{% assign pages = site.pages %}
-				    	{% for p in pages %}
-		    				{% if p.url contains "/faq/" and p.url != "/faq/" %}
+   						{%- assign pages = site.pages -%}
+				    	{%- for p in pages -%}
+		    				{%- if p.url contains "/faq/" and p.url != "/faq/" -%}
 		    					<li class="menu-item">
-			    					<a href="{{ p.url }}" {% if page.url == p.url %}class="black_url"{% endif %}>
+			    					<a href="{{ p.url }}" {%- if page.url == p.url -%}class="black_url"{%- endif -%}>
 			    						{{ p.title | slice: 0, 40 | escape }}...
 			    					</a>
 			    				</li>
-			    			{% endif %}
-			    		{% endfor %}
+			    			{%- endif -%}
+			    		{%- endfor -%}
 			    	</ul>
 		    	</li>
-			{% else %}
-				{% if item.children %}
+			{%- else -%}
+				{%- if item.children -%}
 			    	<li class="menu-item has-children">
-						<a href="{{ item.link }}" {% if page.url == item.link %}class="black_url"{% endif %}>
+						<a href="{{ item.link }}" {%- if page.url == item.link -%}class="black_url"{%- endif -%}>
 							{{ item.name }} <span class="dropdown-icon"></span>
 						</a>
 	   					<ul class="sub-menu">
-					    	{% for c in item.children %}
+					    	{%- for c in item.children -%}
 		    					<li class="menu-item">
 			    					<a href="{{ c.link }}">{{ c.name | escape }}</a>
 			    				</li>
-				    		{% endfor %}
+				    		{%- endfor -%}
 				    	</ul>
 			    	</li>
-				{% else %}
+				{%- else -%}
 				<li class="menu-item">
-					<a href="{{ item.link }}" {% if page.url == item.link %}class="black_url"{% endif %}>
+					<a href="{{ item.link }}" {%- if page.url == item.link -%}class="black_url"{%- endif -%}>
 						{{ item.name }}
 					</a>
 				</li>
-				{% endif %}
-			{% endif %}
-		{% endfor %}
+				{%- endif -%}
+			{%- endif -%}
+		{%- endfor -%}
 	</ul>
 </nav>
