--- a/csirt.divd.nl/_includes/paginator.html
+++ b/csirt.divd.nl/_includes/paginator.html
@@ -1,27 +1,27 @@
-{% capture last_minus_one %}{{ paginator.total_pages | minus : 1 }}{% endcapture %}
-{% capture next_as_string %}{{ paginator.next_page}}{% endcapture %}
+{%- capture last_minus_one -%}{{ paginator.total_pages | minus : 1 }}{%- endcapture -%}
+{%- capture next_as_string -%}{{ paginator.next_page}}{%- endcapture -%}
 
-{% if paginator.total_pages > 1 %}
-    {% if paginator.previous_page %}
+{%- if paginator.total_pages > 1 -%}
+    {%- if paginator.previous_page -%}
         <a class="newer" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Eerder</a> |
-	    {% if paginator.previous_page > 1%}
+	    {%- if paginator.previous_page > 1-%}
             <a class="newer" href="/blog/">1</a> |
-	    {% endif %}
-	    {% if paginator.previous_page > 2%}
+	    {%- endif -%}
+	    {%- if paginator.previous_page > 2-%}
 	    	... |
-	    {% endif %}
+	    {%- endif -%}
     	<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ paginator.previous_page }}</a> |
-    {% endif %}
+    {%- endif -%}
     <b>{{ paginator.page }}</b> 
-    {% if paginator.next_page %}
+    {%- if paginator.next_page -%}
     	|
         <a class="older" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ paginator.next_page }}</a> 
-    	{% if paginator.next_page < paginator.total_pages %}
-	    	{% if next_as_string != last_minus_one %}
+    	{%- if paginator.next_page < paginator.total_pages -%}
+	    	{%- if next_as_string != last_minus_one -%}
 	    		| ... 
-	    	{% endif %}
+	    	{%- endif -%}
 	        | <a class="older" href="/blog/{{ paginator.total_pages }}">{{ paginator.total_pages }}</a>
-    	{% endif %}
+    	{%- endif -%}
         | <a class="older" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Later &raquo;</a>
-    {% endif %}
-{% endif %}
+    {%- endif -%}
+{%- endif -%}
