--- a/csirt.divd.nl/_includes/stats.html
+++ b/csirt.divd.nl/_includes/stats.html
@@ -1,23 +1,23 @@
-{% assign current_year = 0 %}
-{% assign cases = 0 %}
-{% assign ips = 0 %}
-{% assign stats = '' | split: "," %}
-{% for c in site.cases %}
-  {% assign case_arr = c.divd | split: "-" %}
-  {% capture year %}{{ case_arr[1] }}{% endcapture %}
-  {% assign year = year | to_integer %}
-  {% if year > current_year %}
-    {% capture stat %}{{ current_year }}|{{ cases }}|{{ ips }}{% endcapture %}
-    {% assign stats = stats | push: stat %}
-    {% assign current_year = year %}
-    {% assign cases = 0 %}
-    {% assign ips = 0 %}
-  {% endif %}
-  {% assign cases = cases | plus: 1 %}
-  {% assign ips = ips | plus: c.ips %}
-{% endfor %}
-{% capture stat %}{{ year }}|{{ cases }}|{{ ips }}{% endcapture %}
-{% assign stats = stats | push: stat %}
+{%- assign current_year = 0 -%}
+{%- assign cases = 0 -%}
+{%- assign ips = 0 -%}
+{%- assign stats = '' | split: "," -%}
+{%- for c in site.cases -%}
+  {%- assign case_arr = c.divd | split: "-" -%}
+  {%- capture year -%}{{ case_arr[1] }}{%- endcapture -%}
+  {%- assign year = year | to_integer -%}
+  {%- if year > current_year -%}
+    {%- capture stat -%}{{ current_year }}|{{ cases }}|{{ ips }}{%- endcapture -%}
+    {%- assign stats = stats | push: stat -%}
+    {%- assign current_year = year -%}
+    {%- assign cases = 0 -%}
+    {%- assign ips = 0 -%}
+  {%- endif -%}
+  {%- assign cases = cases | plus: 1 -%}
+  {%- assign ips = ips | plus: c.ips -%}
+{%- endfor -%}
+{%- capture stat -%}{{ year }}|{{ cases }}|{{ ips }}{%- endcapture -%}
+{%- assign stats = stats | push: stat -%}
 
 <table>
   <thead>
@@ -28,16 +28,16 @@
     </tr>
   </thead>
   <tbody>
-{% for s in stats %}
-  {% if s != "0|0|0" %}
-    {% assign stat = s | split: "|" %}
-    {% assign ips = stat[2] | to_integer %}
+{%- for s in stats -%}
+  {%- if s != "0|0|0" -%}
+    {%- assign stat = s | split: "|" -%}
+    {%- assign ips = stat[2] | to_integer -%}
     <tr>
       <td>{{ stat[0] }}</td>
       <td class="right-align">{{ stat[1] }}</td>
-      <td class="right-align">{% include numf.html number=ips decimals=0 ts=',' %}</td>
+      <td class="right-align">{%- include numf.html number=ips decimals=0 ts=',' -%}</td>
     </tr>
-  {% endif %}
-{% endfor %}
+  {%- endif -%}
+{%- endfor -%}
 </tbody>
 </table>
